css/index.css
:root {
  --red: #c5004a;
  --darkred: #7f0036;
  --lightgray: #e0e0e0;
  --gray: #c0c0c0;
  --darkgray: #333;
  --navy: #17050f;
  --blue: #082840;
  --white: #fff;

  --color-text-100: rgba(255, 255, 255, 0.9);
  --color-text-200: rgba(255, 255, 255, 0.75);
  --color-text-300: rgba(255, 255, 255, 0.5);
  --color-text-400: rgba(255, 255, 255, 0.25);
  --color-text-500: rgba(255, 255, 255, 0.1);

  --color-primary: #ffce00;

  --color-background: #3c324a;

  --max-width: 900px;
}

/* The emerging W3C standard
   that is currently Firefox-only */
* {
  scrollbar-width: thin;
  scrollbar-color: var(--color-text-400) var(--color-background);
}

/* Works on Chrome/Edge/Safari */
*::-webkit-scrollbar {
  width: 12px;
}
*::-webkit-scrollbar-track {
  background: transparent;
}
*::-webkit-scrollbar-thumb {
  background-color: var(--color-text-400);
  border-radius: 20px;
  border: 2px solid var(--color-background);
}

@supports (color: color(display-p3 1 1 1)) {
  :root {
    -—color-primary: color(display-p3 1 .7 .2);
  }
}

@media (prefers-color-scheme: light) {
  :root {
    --color-text-100: rgba(0, 0, 0, 0.9);
    --color-text-200: rgba(0, 0, 0, 0.75);
    --color-text-300: rgba(0, 0, 0, 0.5);
    --color-text-400: rgba(0, 0, 0, 0.25);
    --color-text-500: rgba(0, 0, 0, 0.1);

    --color-background: #ffffff;
  }
}
* {
  box-sizing: border-box;
}
html,
body {
  padding: 0;
  margin: 0;
  font-family: system-ui, sans-serif;
  color: var(--color-text-200);
  background-color: var(--color-background);
  display: flex;
  flex-direction: column;
  align-items: center;
  font-size: 21px;
  width: 100%;
  letter-spacing: .01rem;
  word-spacing: .01rem;
}
p:last-child {
  margin-bottom: 0;
}

p {
  line-height: 1.45;
  margin: 0 0 2rem;
}
a {
  text-decoration: none;
  color: var(--color-text-100);
  transition: all 0.2s ease;
  border-bottom: 0;
  box-shadow: 0px -1px var(--color-primary) inset;
  font-weight: 500;
}
a:hover {
  box-shadow: 0px -6px var(--color-primary) inset;
  /* border-bottom: 5px solid var(--color-text-400); */
  /* background: var(--color-text-400); */
}
a:before:hover {
  content: " ";
  background: var(--color-text-400);
  width: 100%;
}
a:visited {
  color: var(--color-text-100);
}
main {
  max-width: var(--max-width);
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  margin: auto;
}

table {
  margin: 1em 0;
}
table td,
table th {
  padding: .5rem;
  border-top: 1px solid var(--color-text-500);
  text-align: left;
}

emphasis {
  font-style: italic;
}

ul, ol {
  list-style: none;
  counter-reset: counter;
}

ul li::before {
  content: "\2022"; /* Add content: \2022 is the CSS Code/unicode for a bullet */
  color: var(--color-text-400); /* Change the color */
  font-weight: bolder; /* If you want it to be bold */
  display: inline-block; /* Needed to add space between the bullet and the text */
  width: 1rem; /* Also needed for space (tweak if needed) */
  margin-left: -1rem; /* Also needed for space (tweak if needed) */
  font-weight: 800;
}

ol:not(.postlist) li {
  counter-increment: counter;
  margin-left: -1.15rem
}
ol:not(.postlist) li::before {
  content: counter(counter) ".";
  color: var(--color-text-400);
  font-weight: bold;
  font-size: .75rem;
  margin-right: .5rem;
}

.container {
  padding: 10vh calc(1rem + 1vw);
  width: 100%;
}

/* @media screen and (max-width: 614px) {
  .container {
    padding: 8vh 2rem;
  }
} */

.highlight-line {
  display: block;
  padding: 0.125em 1em;
  text-decoration: none; /* override del, ins, mark defaults */
  color: inherit; /* override del, ins, mark defaults */
}

/* allow highlighting empty lines */
.highlight-line:empty:before {
  content: " ";
}
/* avoid double line breaks when using display: block; */
.highlight-line + br {
  display: none;
}

.highlight-line-isdir {
  color: #b0b0b0;
  background-color: #222;
}
.highlight-line-active {
  background-color: #444;
  background-color: hsla(0, 0%, 27%, 0.8);
}
.highlight-line-add {
  background-color: #45844b;
}
.highlight-line-remove {
  background-color: #902f2f;
}

/* Header */
.global-header {
  display: flex;
  flex-direction: row;
  align-items: flex-start;
  justify-content: flex-start;
  max-width: var(--max-width);
  margin: auto;
}

.gobal-header-title-section {
  flex: 3 1;
}

.global-header-title {
  margin: 0;
  font-size: 1.5rem;
}

.global-header-tagline {
  max-width: 400px;
  margin: 0.25rem 2rem 2rem 0;
}

.global-header-tagline h2 {
  color: var(--color-text-300);
  font-size: 1.2rem;
  font-weight: 400;
  margin: 0;
}

.global-header-intro {
  margin: 0;
}

.global-header-intro h2 {
  color: var(--color-text-400);
  font-size: 0.8rem;
  font-weight: 800;
  margin: 0;
  text-transform: uppercase;
}

.global-header-nav {
  flex: 1;
  padding: 0;
  display: flex;
  /* justify-content: flex-end; */
  /* margin: 2rem 0 0; */
  flex-direction: column;
  align-items: flex-end;
  margin: 0;
}

.global-header-nav:last {
  /* margin: 0.25rem 0 0; */
}

@media screen and (max-width: 614px) {
  .global-header {
    flex-direction: column;
  }
  .global-header-nav {
    align-items: flex-start;
  }
}

/* Nav */
.nav {
  padding: 0;
  list-style: none;
  margin-left: 1em;
}
.nav-item {
  display: inline-block;
  margin: 0 0 0.3rem 0;
}
.nav-item:last-child {
  /* margin: 0.25rem 0 0; */
}
.nav-item a:not(:hover) {
  text-decoration: none;
}
.nav-item-active a {
  font-weight: 700;
  box-shadow: 0px -3px var(--color-primary) inset;
}

/* Posts list */
.postlist {
  list-style: none;
  padding: 0;
}
.postlist-item {
  counter-increment: start-from -1;
  margin: 0 0 3rem;
}
.postlist-item:before {
  display: inline-block;
  pointer-events: none;
  /* content: "" counter(start-from, decimal-leading-zero) ". "; */
  line-height: 100%;
  text-align: right;
}
.postlist-date,
.postlist-item:before {
  font-size: 0.8125em; /* 13px /16 */
  color: var(--color-text-300);
}
.postlist-date {
  word-spacing: -0.5px;
  display: block;
}
.postlist-link {
  display: inline-block;
  padding: 0.25rem 0;
}
.postlist-item-active .postlist-link {
  font-weight: bold;
}

/* Tags */

.tag-list {
  display: flex;
  flex-wrap: wrap;
  grid-area: tags;
  margin: 0;
}

.tag {
  display: inline-block;
  vertical-align: text-top;
  text-transform: uppercase;
  font-size: 0.625em;
  padding: .25rem .5rem;
  margin: .25rem .5rem .25rem 0;
  background-color: var(--color-primary);
  color: var(--color-text-300);
  border-radius: 0.25rem;
  text-decoration: none;
}

/* Direct Links / Markdown Headers */
.direct-link.direct-link {
  font-family: sans-serif;
  text-decoration: none;
  font-style: normal;
  margin-left: 0.1em;
  box-shadow: none;
}
a.direct-link,
a.direct-link:visited {
  color: var(--color-text-400);
}
a.direct-link:focus,
a.direct-link:focus:visited,
:hover > a.direct-link,
:hover > a.direct-link:visited {
  color: var(--color-primary);
  box-shadow: none;
}

.post {
  display: flex;
  flex-direction: column;
  margin: 0 0 6rem;
  max-width: var(--max-width);
  width: 100%;
}

.post h1 {
  margin: 0;
  font-size: 2rem;
}

.post .post-meta-data {
  display: flex;
  align-items: center;
}

.post-description {
  margin: 0 0 6vh 0;
  font-size: 1.2rem;
  color: var(--color-text-300);
}

.post .post-meta-data time {
  flex: 1 4 100px;
  text-align: end;
  color: var(--color-text-300);
}

.related-posts-nav {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  align-items: flex-start;
  width: 100%;
  max-width: var(--max-width);
}

.related-posts-nav label {
  flex: 1 1 100px;
  display: flex;
  flex-direction: column;
  text-transform: capitalize;
  font-size: 1rem;
  color: var(--color-text-400);
}

.related-posts-nav .home {
  margin: 1.5rem auto 0;
}

.related-posts-nav label:first-child {
  margin: 0 2rem 0 0;
  align-items: flex-start;
}

.related-posts-nav label:last-child {
  margin: 0 0 0 2rem;
  align-items: flex-end;
  text-align: right;
}

.text-fine {
  font-size: 0.75rem;
  color: var(--color-text-400);
}

footer {
  margin: 2rem 1rem;
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
}

footer a {
  margin: 0 0.5rem;
}

footer .copyright::before {
  content: "© ";
}

footer .copyright {
  margin-top: 2rem;
}

.flex-start {
  align-self: flex-start;
}

hr {
  border: none;
  border-top: 1px solid var(--color-text-400);
}

.archive-post {
  display: grid;
  grid-template-areas:
    "date heading heading"
    "   . excerpt excerpt";
  grid-template-columns: 2fr 3fr 3fr;
  grid-template-rows: auto;
  margin: 0 0 3rem 0;
}

.archive-heading {
  grid-area: heading;
  margin: 0;
  font-size: 1.4rem;
  font-weight: 400;
}

.archive-date {
  grid-area: date;
  margin: .5rem 0 0 0;
}

.archive-excerpt {
  grid-area: excerpt;
  margin: .5rem 0 0 0;
}

a[href^="http"]::after {
  content: "↗";
  padding-left: 0.125rem;
  font-weight: 800;
  color: var(--color-text-300);
  transition: all 0.2s ease;
}

a[href^="http"]:hover::after {
  content: "↗";
  padding-left: 0.125rem;
  font-weight: 800;
  color: var(--color-primary);
}

@media screen and (min-width: 800px) {
  .archive-post {
    grid-template-columns: 1.5fr 4fr 4fr;
    gap: .5rem 2rem;
    grid-template-areas:
      "date heading excerpt"
      "date tags    excerpt";
  }
}

@media screen and (max-width: 614px) {
  .archive-post {
    grid-template-columns: 100%;
    gap: 0 0;
    grid-template-areas:
      "date"
      "heading"
      "tags"
      "excerpt";
  }
}

.flex-row {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: space-between;
}

.flex-row.flex-paragraph h1 {
  width: 100%;
  margin: 1rem;
}

.flex-row.flex-paragraph {
  margin: -1rem auto;
}

.flex-row.flex-paragraph p {
  flex: 2 2 240px;
  padding: 1rem;
}

.flex-row.flex-paragraph p:nth-child(4n + 3) {
  background: var(--color-text-500);
  border-radius: 16px;
}

.flex-column {
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;
  justify-content: space-between;
}

ul.no-list-style li::before,
ol.no-list-style li::before {
  content: none;
}

blockquote {
  padding: 0 0 0 1rem;
  border-left: 3px solid var(--color-primary);
  margin: -1.5rem 0 2rem 0;
}

code {
  background: var(--color-text-500);
  font-family: monospace;
  padding: .15rem .25rem;
  border-radius: 4px;
}

em {
  font-style: italic;
  font-weight: 300;
}

strong {
  font-weight: 700;
}

img:not([src$=".svg"]) {
  border-radius: 16px;
  box-shadow:
    0 2.8px 2.2px rgba(0, 0, 0, 0.034),
    0 6.7px 5.3px rgba(0, 0, 0, 0.048),
    0 12.5px 10px rgba(0, 0, 0, 0.06),
    0 22.3px 17.9px rgba(0, 0, 0, 0.072),
    0 41.8px 33.4px rgba(0, 0, 0, 0.086);
}

